--- a/worksApp/package.json
+++ b/worksApp/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.4.0",
+    "eas-cli": "^4.1.2",
     "expo": "~49.0.5",
     "expo-image-picker": "^14.3.2",
     "expo-splash-screen": "~0.20.4",
