--- a/worksApp/package.json
+++ b/worksApp/package.json
@@ -30,8 +30,10 @@
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-tab-view": "^3.5.2",
+    "react-native-vector-icons": "^10.0.0",
     "react-native-webview": "^13.3.1",
     "react-native-youtube-iframe": "^2.3.0",
+    "react-router-native": "^6.15.0",
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
