--- a/worksApp/package.json
+++ b/worksApp/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.1",
+    "@react-native-community/datetimepicker": "^7.4.2",
+    "@react-native-picker/picker": "^2.5.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/material-top-tabs": "^6.6.3",
@@ -18,15 +20,18 @@
     "axios": "^1.4.0",
     "eas-cli": "^4.1.2",
     "expo": "~49.0.5",
-    "expo-image-picker": "^14.3.2",
+    "expo-image-picker": "~14.3.2",
     "expo-splash-screen": "~0.20.4",
     "expo-status-bar": "~1.6.0",
     "lodash.filter": "^4.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-document-picker": "^9.0.1",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-image-picker": "^5.6.1",
     "react-native-pager-view": "^6.2.0",
     "react-native-reanimated": "~3.3.0",
+    "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-select-dropdown": "^3.3.4",
@@ -35,7 +40,9 @@
     "react-native-webview": "^13.3.1",
     "react-native-youtube-iframe": "^2.3.0",
     "react-router-native": "^6.15.0",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "expo-checkbox": "~2.4.0",
+    "expo-font": "~11.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
